made add car work
