# car-part-core-micro/src/main/java/com/gini/controller/CarController.java
@@ -7,7 +7,6 @@ import com.gini.dto.CarRequest;
 import com.gini.dto.CarResponse;
 import com.gini.dto.PartFilterRequest;
 import com.gini.repository.CustomCarRepository;
-import com.gini.repository.filters.CarFilter;
 import com.gini.service.CarService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -16,6 +15,7 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.List;
 import java.util.UUID;
 
 @Slf4j
@@ -46,6 +46,11 @@ public class CarController implements CarApi {
 
 
         return null;
+    }
+
+    @Override
+    public ResponseEntity<List<CarManufacturerResponse>> getAllManufacturers() {
+        return ResponseEntity.ok(carService.getAllManufacturers());
     }
 
 
