# car-part-core-micro/src/main/resources/car-parts-openapi.yaml
@@ -384,6 +384,55 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
 
+  /car/manufacturers:
+    get:
+      tags:
+        - car
+      summary: Retrieves a list of car manufacturers
+      description: Retrieves a list of car manufacturers from the database
+      operationId: getAllManufacturers
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CarManufacturersResponse'
+        '400':
+          description: Validation exception
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+              # multiple error examples
+              examples:
+                InvalidCarFields:
+                  value:
+                    message: Invalid fields
+                    status: 400
+                CarAlreadyExists:
+                  value:
+                    message: Car already exists
+                    status: 400
+        '404':
+          description: Not found exception
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+              # multiple error examples
+              examples:
+                PartNotfound:
+                  value:
+                    message: Car not found
+                    status: 404
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
 components:
   schemas:
     PartManufacturerRequest:
@@ -644,6 +693,11 @@ components:
           pattern: ^[a-zA-Z0-9\s-]{1,60}$
           example: Ford
           description: name of the car manufacturer
+    CarManufacturersResponse:
+      type: array
+      items:
+        $ref: "#/components/schemas/CarManufacturerResponse"
+
     ErrorResponse:
       required:
         - message
